// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptionalInputBnt should render correctly in "debug" mode 1`] = `
<OptionalInputBnt
  name=""
  toggleVisibilityFn={[Function]}
  visible={false}
>
  <div
    className="col-sm-4"
  >
    <Button
      color="secondary"
      onClick={[Function]}
      size="lg"
      tag="button"
    >
      <button
        aria-label={null}
        className="btn btn-secondary btn-lg"
        onClick={[Function]}
        type="button"
      >
        Add 
      </button>
    </Button>
  </div>
</OptionalInputBnt>
`;

exports[`OptionalInputs should render correctly in "debug" mode 1`] = `
<OptionalInputs
  toggleVisibilityFn={[Function]}
  visibles={Array []}
>
  <Col
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <div
      className="col"
    >
      <div
        className="row add-space button-row-space"
      >
        <OptionalInputBnt
          key="0"
          name="starship"
          toggleVisibilityFn={[Function]}
        >
          <div
            className="col-sm-4"
          >
            <Button
              color="secondary"
              onClick={[Function]}
              size="lg"
              tag="button"
            >
              <button
                aria-label={null}
                className="btn btn-secondary btn-lg"
                onClick={[Function]}
                type="button"
              >
                Add starship
              </button>
            </Button>
          </div>
        </OptionalInputBnt>
        <OptionalInputBnt
          key="1"
          name="vehicle"
          toggleVisibilityFn={[Function]}
        >
          <div
            className="col-sm-4"
          >
            <Button
              color="secondary"
              onClick={[Function]}
              size="lg"
              tag="button"
            >
              <button
                aria-label={null}
                className="btn btn-secondary btn-lg"
                onClick={[Function]}
                type="button"
              >
                Add vehicle
              </button>
            </Button>
          </div>
        </OptionalInputBnt>
        <OptionalInputBnt
          key="2"
          name="species"
          toggleVisibilityFn={[Function]}
        >
          <div
            className="col-sm-4"
          >
            <Button
              color="secondary"
              onClick={[Function]}
              size="lg"
              tag="button"
            >
              <button
                aria-label={null}
                className="btn btn-secondary btn-lg"
                onClick={[Function]}
                type="button"
              >
                Add species
              </button>
            </Button>
          </div>
        </OptionalInputBnt>
      </div>
    </div>
  </Col>
</OptionalInputs>
`;
